# Marshmallow-SqlAlchemy-Demo

./: .gitignore  README.md  pyproject.toml
src/: db_init.py  demo.py  interactive.py  model.py  schema.py
