[tool.poetry]
name = "sqlalchemy-test"
version = "0.1.0"
description = ""
authors = ["CR1337 <captain_2@gmx.de>"]
readme = "README.md"
packages = [{include = "sqlalchemy_test"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.7"
marshmallow-sqlalchemy = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
